--- a/Homework_01/page_404.html
+++ b/Homework_01/page_404.html
@@ -63,10 +63,10 @@
 			<h1 class="error_code">404</h1>
 			<p >Ошибка!!!</p>
 			<h5 class="description" style="text-align: center;">О, нееет! <br>
-			Видимо, разряд молнии закоротил микрочип, контролирующий временной контур :(
+			Разряд молнии закоротил микрочип, контролирующий временной контур :(
 			</h5>
 			<div class="error">
-				<p>Но вероятно, причины в следующем:</p>
+				<p>Хотя, вероятно, причины в следующем:</p>
 				<ul>
 					<li>Возможно, вы ошиблись при наборе адреса</li>
 					<li>Cсылка, по которой вы прошли, устарела</li>
